Protect bundled node from revocation
